<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Ultimate Lego Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- ## ACTIVITY TITLES ## -->
    <string name="title_activity_main">Main</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Results</string>
    <string name="title_activity_set_info">Legoset Information</string>
    <string name="title_activity_building_instruction">Building Instructions </string>
    <string name="title_activity_update_db">Updating Database</string>

    <!-- ## BUTTON TITLES ## -->
    <string name="button_favorites">Favorites</string>
    <string name="button_show_building_instructions">Show building instructions</string>

    <!-- ## SET INFO ## -->
    <string name="setinfo_year">%s</string>
    <string name="setinfo_price">$%.2f</string>
    <string name="setinfo_nopieces">(no pieces)</string>
    <string name="setinfo_no_such_set">The specified set does not exist.</string>

    <!-- ## TEMPORARY GARBAGE ## -->
    <string name="garbage_showSet456">Exemple : set 456</string>
    <string name="garbage_showSet123">Show set 123 (in favorites)</string>
    <string name="garbage_infoForSet">Showing info for set %s</string>
    <string name="garbage_buildingInstructionsForSet">Building instructions for set %s</string>
    <string name="garbage_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt tincidunt mauris quis vestibulum. In vitae dolor nec ipsum vestibulum dictum vel eu est. Sed id velit nec leo volutpat iaculis. In vel turpis erat. Proin lorem arcu, varius at sapien quis, tempor auctor elit. Vestibulum nisi orci, mattis non varius id, ullamcorper eget nisi. Suspendisse purus nunc, gravida ac placerat ut, tristique eget erat. Donec nunc purus, malesuada non venenatis imperdiet, consequat quis nulla. Sed placerat ultricies odio quis vulputate. Pellentesque porttitor sagittis risus, ac accumsan nulla consectetur quis.\n
\n
Sed facilisis leo magna, eget tristique est rutrum non. Vivamus sit amet iaculis sem. Sed a euismod ipsum. Maecenas sem nulla, placerat id sapien ut, volutpat lobortis nulla. Suspendisse rutrum quam nec ligula lobortis venenatis. Sed iaculis non lectus eget pretium. Mauris vestibulum laoreet eros commodo ultrices. Nullam id porttitor ipsum, id porta justo. In vehicula tempus mi, vitae tempor neque viverra et. Curabitur consequat, turpis eget tincidunt bibendum, lectus dolor luctus lectus, nec luctus orci turpis ut risus.\n
\n
Praesent id nibh scelerisque, ornare purus eget, pulvinar nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent non purus eleifend, auctor purus a, sollicitudin leo. In eget ultrices tortor. Donec viverra et elit vitae euismod. Vivamus aliquam lorem vitae ligula posuere aliquet. Fusce semper iaculis viverra. Nulla interdum accumsan augue vitae volutpat.\n
\n
Etiam ultricies elementum arcu, in volutpat dui condimentum id. Sed at faucibus massa, ac blandit magna. Nunc interdum porta risus a tincidunt. Pellentesque ac aliquet diam. Phasellus nec scelerisque purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean dictum eu nisi nec posuere. Aliquam tempor, felis eu laoreet interdum, nisl odio commodo sapien, placerat rhoncus libero velit venenatis elit. Etiam a metus risus. Quisque scelerisque quam quis tincidunt volutpat. Etiam eleifend libero in velit luctus, in scelerisque risus dapibus. Ut sodales sem rhoncus felis fermentum lacinia. Nunc imperdiet ullamcorper nibh in ullamcorper.\n
\n
Integer non felis in libero malesuada hendrerit. Donec sed leo laoreet, iaculis lorem vel, egestas nulla. Phasellus vitae auctor erat, ac venenatis augue. Aenean vestibulum, lorem in consectetur eleifend, diam libero dignissim quam, malesuada lacinia tellus tellus sed est. Vivamus feugiat adipiscing neque, eu ultricies diam adipiscing vitae. Nulla vel mi eu nibh mollis tincidunt. Fusce auctor, dui sed sodales bibendum, dui sapien congue nibh, sed facilisis massa lectus sed erat. Donec facilisis ligula ac mauris sodales tincidunt.</string>

    <!-- ## SearchActivity strings ## -->
    <string name="search_search_field">Key word...</string>
    <string name="search_button_search">Search</string>
    <string name="search_year_min_search">From</string>
    <string name="search_year_max_search">To</string>
    <string name="search_price_min_search">From </string>
    <string name="search_price_max_search">To </string>
    <string name="search_piece_min_search">From </string>
    <string name="search_piece_max_search">To </string>
    <string name="search_year_indication">Range of year :</string>
    <string name="search_price_indication">Range of price ($) :</string>
    <string name="search_piece_indication">Number of pieces :</string>
    <string name="search_enter_numeric_values_only">Year / Price / Number of pieces can only be numeric values.</string>
    <string name="search_no_results">No lego sets found. Please modify your criteria and try again.</string>
    
    <!--  ## SearchResultActivity ## -->
    <string name="search_results_no_favorites">No favorites yet. Please add some sets to favorites first.</string>
    <string name="search_results_no_results">No results. Please go back to search.</string>
    
    <!--  ## UPDATE DB ACTIVITY ## -->
    <string name="update_db_title">Updating database... please wait...</string>
    <string name="update_db_initializing">Initializing...</string>
    <string name="update_db_percentage_done">%.0f%%</string>
    <string name="update_db_partial_errors_status">Some errors have occured. Retry?</string>
    <string name="update_db_total_errors_status">No set could be fetched. Retry?</string>
    <string name="update_db_error_retry">Retry</string>

    <!-- ## PROGRAM PREFERENCES ## -->
    <string name="preferences_filename">ca.umontreal.iro.theultimatelegoproject.preferences</string>
    <string name="preferences_last_db_import_date">last_db_import_date</string>

</resources>
