<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@drawable/red_background">

    
    <!-- http://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup
    Dummy item to prevent AutoCompleteTextView from receiving focus -->
	<LinearLayout
    android:focusable="true" android:focusableInTouchMode="true"
    android:layout_width="0px" android:layout_height="0px"/>
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"  
    	android:padding="@dimen/linear_padding_side"  >
    	
        <EditText
            android:id="@+id/searchBox"
            style="@style/EditText"
            android:hint="@string/search_search_field"
            android:nextFocusDown="@+id/annee_min_search" />
	
        <Space
            android:layout_width="fill_parent"
        	android:layout_height="@dimen/linear_padding_height" />
        	
        <TextView
            android:text="@string/search_year_indication"
            style="@style/IndicationText" />
            
        <LinearLayout 
        	android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:layout_gravity="center"
      		android:orientation="horizontal">

	        <EditText
	            android:id="@+id/annee_min_search"
	            style="@style/EditText"
	            android:layout_weight="1"
	            android:hint="@string/search_year_min_search"
	            android:inputType="number"
	            android:nextFocusDown="@+id/annee_max_search"
	            android:nextFocusLeft="@+id/searchBox"
	            android:nextFocusRight="@+id/annee_max_search"
	            android:paddingRight="5dp" />
	        
	        <Space
            	android:layout_width="@dimen/space_between_box"
        		android:layout_height="fill_parent" />
	                 
	      	<EditText
	      	    android:id="@+id/annee_max_search"
	      	    style="@style/EditText"
	      	    android:layout_weight="1"
	      	    android:hint="@string/search_year_max_search"
	      	    android:inputType="number"
	      	    android:nextFocusDown="@+id/prix_min_search"
	      	    android:nextFocusLeft="@+id/annee_min_search"
	      	    android:nextFocusRight="@+id/prix_min_search"
	      	    android:nextFocusUp="@+id/annee_min_search"
	      	    android:paddingLeft="5dp" />
	        
        </LinearLayout>
        
         <Space
            android:layout_width="fill_parent"
        	android:layout_height="@dimen/linear_padding_height" />
        	
         <TextView
            android:text="@string/search_price_indication"
            style="@style/IndicationText" />
         
        <LinearLayout 
        	android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:layout_gravity="center"
      		android:orientation="horizontal">

	        <EditText
	            android:id="@+id/prix_min_search"
	            style="@style/EditText"
	            android:layout_weight="1"
	            android:hint="@string/search_price_min_search"
	            android:inputType="numberDecimal"
	            android:nextFocusDown="@+id/prix_max_search"
	            android:nextFocusUp="@+id/annee_max_search"
	            android:paddingRight="5dp" />
	        
	        <Space
            	android:layout_width="@dimen/space_between_box"
        		android:layout_height="fill_parent" />
	                 
	      	<EditText
	      	    android:id="@+id/prix_max_search"
	      	    style="@style/EditText"
	      	    android:layout_weight="1"
	      	    android:hint="@string/search_price_max_search"
	      	    android:inputType="numberDecimal"
	      	    android:nextFocusDown="@+id/piece_min_search"
	      	    android:nextFocusUp="@+id/prix_min_search"
	      	    android:paddingLeft="5dp" />
        
     	</LinearLayout> 
     
         <Space
            android:layout_width="fill_parent"
        	android:layout_height="@dimen/linear_padding_height" />
        	
         <TextView
            android:text="@string/search_piece_indication"
            style="@style/IndicationText" />
         
        <LinearLayout 
        	android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:layout_gravity="center"
      		android:orientation="horizontal">

	        <EditText
	            android:id="@+id/piece_min_search"
	            style="@style/EditText"
	            android:layout_weight="1"
	            android:hint="@string/search_piece_min_search"
	            android:inputType="number"
	            android:nextFocusDown="@+id/piece_max_search"
	            android:nextFocusUp="@+id/prix_max_search"
	            android:paddingRight="5dp" />
	        
	        <Space
            	android:layout_width="@dimen/space_between_box"
        		android:layout_height="fill_parent" />
	                 
	      	<EditText
	      	    android:id="@+id/piece_max_search"
	      	    style="@style/EditText"
	      	    android:layout_weight="1"
	      	    android:hint="@string/search_piece_max_search"
	      	    android:inputType="number"
	      	    android:nextFocusUp="@+id/piece_min_search"
	      	    android:paddingLeft="5dp" />
    
        </LinearLayout>
        
        <Space
            android:layout_width="fill_parent"
        	android:layout_height="@dimen/linear_padding_height" />
        	
        <LinearLayout
		    android:id="@+id/button_search"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/button_custom"
		    android:gravity="center"
		    android:orientation="horizontal"
		    android:clickable="true">

		    <ImageView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:src="@drawable/search_button_icon" 
		        android:layout_weight="2"/>
		
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="left"
		        android:text="@string/search_button_search"
		        android:textSize="@dimen/text_box_size" />

		</LinearLayout>
             
     </LinearLayout>
        
        
</RelativeLayout>
 